// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`web component: Button should have right properties 1`] = `
LoadedCheerio {
  "0": <button
    class="button class-name  "
    data-mona-loading="true"
    data-mona-size="mini"
    data-mona-type="primary"
    disabled=""
    style="color: red;"
    type="submit"
  >
    hello
  </button>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`web component: Button should render correctly 1`] = `
LoadedCheerio {
  "0": <button
    class="button   "
    data-mona-loading="false"
    data-mona-size="default"
  >
    Hello world
  </button>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;
